# rust-micro-benchmark

./: Cargo.toml  README.md
benches/: hashmap_get_vs_vec_find.rs  hashmap_get_vs_vec_get.rs  hashmap_insert_remove.rs  rwlock_vs_mutex_vs_raw.rs  rwlock_vs_mutex_vs_regular.rs
