[package]
name = "micro-benchmark"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
criterion = "0.3"


[[bench]]
name = "hashmap_get_vs_vec_find"
harness = false
[[bench]]
name = "rwlock_vs_mutex_vs_raw"
harness = false
[[bench]]
name = "hashmap_insert_remove"
harness = false